--- a/local.bib
+++ b/local.bib
@@ -13,6 +13,23 @@
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@Book{FickettDavis,
+  ALTauthor = 	 {W. Fickett and W.C. Davis},
+  ALTeditor = 	 {},
+  title = 	 {Detonation Theory and Experiment},
+  publisher = 	 {Dover},
+  year = 	 {1999},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTaddress = 	 {},
+  OPTedition = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
 @article{Shannon48,
 	author={C.E. Shannon},
 	title={A mathematical theory of communication},
@@ -54,7 +71,7 @@ ISSN={0018-9448},}
 }
 
 @article{fritz96,
-  title={Overdriven-detonation and sound-speed measurements in PBX-9501 and the ‘‘thermodynamic’’Chapman--Jouguet pressure},
+  title="{Overdriven-detonation and sound-speed measurements in PBX-9501 and the		``thermodynamic'' Chapman--Jouguet pressure}",
   author={Fritz, JN and Hixson, RS and Shaw, MS and Morris, CE and McQueen, RG},
   journal={Journal of applied physics},
   volume={80},
@@ -66,10 +83,16 @@ ISSN={0018-9448},}
 
 @Unpublished{Pemberton9501,
   author =       {S Pemberton and T Sandoval and T Herrera and J Echave and G Maskaly},
-  title =        {Test report of equation of state measurements of PBX-9501},
-  note =         {LA-UR 11-04999},
+  title =        "{Test report of equation of state measurements of PBX-9501}",
+  note =         {\url{http://permalink.lanl.gov/object/tr?what=info:lanl-repo/lareport/LA-UR-11-04999}},
   OPTkey =       {},
   OPTmonth =     {},
   OPTyear =      {},
   OPTannote =    {}
 }
+
+%%%---------------
+%%% Local Variables:
+%%% eval: (bibtex-mode)
+%%% eval: (setq ispell-personal-dictionary "./localdict")
+%%% End:
